[gd_scene load_steps=4 format=3 uid="uid://dk10qs4awue4m"]

[ext_resource type="Script" path="res://connector_3line.gd" id="1_8cegv"]
[ext_resource type="Texture2D" uid="uid://plb4ecr4ho6o" path="res://icon.svg" id="2_06tgu"]
[ext_resource type="Texture2D" uid="uid://qijqlc5ujg5j" path="res://art/dome_sprites/infestation_96_rotated.png" id="3_1f7g7"]

[node name="Connector" type="Node2D"]
script = ExtResource("1_8cegv")

[node name="MainLine" type="Line2D" parent="."]
texture_repeat = 2
points = PackedVector2Array(27, 30, 118, 105)
texture = ExtResource("2_06tgu")
texture_mode = 1

[node name="ForwardLine" type="Line2D" parent="."]
texture_repeat = 2
points = PackedVector2Array(30.18, 26.1416, 75.68, 63.6416)
texture = ExtResource("3_1f7g7")
texture_mode = 1

[node name="ReverseLine" type="Line2D" parent="."]
texture_repeat = 2
points = PackedVector2Array(114.82, 108.858, 46.57, 52.6084)
texture = ExtResource("3_1f7g7")
texture_mode = 1
